tests/baselines/reference/parserAccessibilityAfterStatic6.errors.txt
parserAccessibilityAfterStatic6.ts(3,14): error TS1005: '}' expected.


==== parserAccessibilityAfterStatic6.ts (1 errors) ====
    class Outer
    {
    static public
                 
!!! error TS1005: '}' expected.